tests/fixtures/errors/ci/src/App.elm
module App exposing (main)

import Html


main =
    Html.text "App"
